tests/specs/run/bytes_and_text_imports/missing_unstable/main.ts
import data from "./data.txt" with { type: "bytes" };

console.log(data);
